[package]
name = "oewn_rs"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] } # Use "full" for simplicity, includes rt-multi-thread, macros, io-util, etc.
reqwest = { version = "0.12", features = ["json", "stream"] }
zip = "2"
quick-xml = { version = "0.37", features = ["serialize", "async-tokio"] } # For XML parsing and serialization
serde = { version = "1.0", features = ["derive"] }
directories-next = "2.0"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
rand = "0.9" # For random word selection
colored = "3" # For colored output
futures = "0.3" # For async stream processing if needed
flate2 = "1.1" # For Gzip decompression
scopeguard = "1.2" # For temporary directory cleanup
tempfile = "3.19" # For creating temporary directories
rusqlite = { version = "0.34", features = ["bundled"] } # For SQLite database interaction
